fix Scrollbars inner div overflow issue

--- a/src/components/Editor/Editor.scss
+++ b/src/components/Editor/Editor.scss
@@ -2,12 +2,19 @@
 {
   min-height: 100%;
   position: relative;
-  > div { 
+  > div {
     position: absolute!important;
     > div{
         width: 100%;
         height: 100%;
         position: absolute;
+    }
   }
+  .custom-scrollbars
+  {
+    > div > div
+    {
+      overflow-x: hidden !important;
+    }
   }
 }
